--- a/app/javascript/locales/jp.json
+++ b/app/javascript/locales/jp.json
@@ -641,7 +641,9 @@
         "matchManagement": "試合管理",
         "timetable": "タイムテーブル",
         "notificationManagement": "通知管理",
-        "tournaments": "トーナメント"
+        "tournaments": "トーナメント",
+        "teamMatches": "参加予定試合管理",
+        "teamOrder": "詳細ページ"
       }
     },
     "adminHeader": {
