--- a/app/javascript/locales/jp.json
+++ b/app/javascript/locales/jp.json
@@ -9,6 +9,8 @@
       "registration_time": "登録開始時間",
       "organization_name": "組織名",
       "payment_method": "支払方法",
+      "local_cash": "現地現金",
+      "credit_card": "クレジットカード",
       "match_start_time": "試合開始時間",
       "match_overview": "試合概要",
       "organizer": "主催者",
@@ -636,11 +638,8 @@
       "title": "トーナメント主催者",
       "menu": {
         "tournamentManagement": "大会管理",
-        "tournamentManagementAdmin": "トーナメント管理",
         "usersManagement": "ユーザー管理",
-        "usersManagementAdmin": "プレイヤー管理",
         "organizerManagement": "主催者管理",
-        "organizerManagementAdmin": "大会運営者管理",
         "tournamentCreation": "トーナメント作成",
         "typeManagement": "タイプ管理",
         "splitManagement": "分割管理",
