--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -61,6 +61,22 @@
       "mensTriplesTeam": "Men's Triples Team",
       "womensTriplesTeam": "Women's Triples Team",
       "mixedTriplesTeam": "Mixed Triples Team",
+      "mens_singles_individual": "Men's Singles Individual",
+      "womens_singles_individual": "Women's Singles Individual",
+      "mens_doubles_individual": "Men's Doubles Individual",
+      "womens_doubles_individual": "Women's Doubles Individual",
+      "mens_triples_individual": "Men's Triples Individual",
+      "womens_triples_individual": "Women's Triples Individual",
+      "mixed_triples_individual": "Mixed Triples Individual",
+      "mens_doubles_team": "Men's Doubles Team",
+      "womens_doubles_team": "Women's Doubles Team",
+      "mixed_doubles_team": "Mixed Doubles Team",
+      "mens_singles_doubles_team": "Men's Singles Doubles Team",
+      "womens_singles_doubles_team": "Women's Singles Doubles Team",
+      "mixed_singles_doubles_team": "Mixed Singles Doubles Team",
+      "mens_triples_team": "Men's Triples Team",
+      "womens_triples_team": "Women's Triples Team",
+      "mixed_triples_team": "Mixed Triples Team",
       "numberOfGames": "Number of Games",
       "gameNumberPlaceholder": "Game Number",
       "score": "Score",
