--- a/app/javascript/locales/jp.json
+++ b/app/javascript/locales/jp.json
@@ -46,6 +46,22 @@
       "womensSinglesIndividual": "女子シングルス個人戦",
       "mensDoublesIndividual": "男子ダブルス個人戦",
       "womensDoublesIndividual": "女子ダブルス個人戦",
+      "mens_singles_individual": "男子シングルス個人戦",
+      "womens_singles_individual": "女子シングルス個人戦",
+      "mens_doubles_individual": "男子ダブルス個人戦",
+      "womens_doubles_individual": "女子ダブルス個人戦",
+      "mens_triples_individual": "男子トリプルス個人戦",
+      "womens_triples_individual": "女子トリプルス個人戦",
+      "mixed_triples_individual": "混合トリプルス個人戦",
+      "mens_doubles_team": "男子ダブルス団体戦",
+      "womens_doubles_team": "女子ダブルス団体戦",
+      "mixed_doubles_team": "混合ダブルス団体戦",
+      "mens_singles_doubles_team": "男子シングルス・ダブルス団体戦",
+      "womens_singles_doubles_team": "女子シングルス・ダブルス団体戦",
+      "mixed_singles_doubles_team": "混合シングルス・ダブルス団体戦",
+      "mens_triples_team": "男子トリプルス団体戦",
+      "womens_triples_team": "女子トリプルス団体戦",
+      "mixed_triples_team": "混合トリプルス団体戦",
       "numberOfGames": "試合数",
       "gameNumberPlaceholder": "試合番号",
       "score": "スコア",
