--- a/app/javascript/locales/jp.json
+++ b/app/javascript/locales/jp.json
@@ -1,8 +1,8 @@
 {
   "translation": {
     "tournament": {
-      "add_new_tournament": "新しいトーナメントを追加",
-      "name": "名前",
+      "add_new_tournament": "トーナメント登録",
+      "name": "大会名",
       "region": "地域",
       "prefecture": "都道府",
       "event_date_time": "イベント日時",
@@ -12,16 +12,17 @@
       "local_cash": "現地現金",
       "credit_card": "クレジットカード",
       "match_start_time": "試合開始時間",
-      "match_overview": "試合概要",
+      "match_overview": "大会概要",
       "organizer": "主催者",
       "administrator": "管理者",
       "sponsor": "スポンサー",
       "event_category": "イベントカテゴリ",
       "days_schedule": "日程表",
       "reception_period": "受付期間",
-      "competition_format": "競技形式",
+      "competition_format": "競技規則",
       "max_participants": "最大参加者数",
       "competition_rules": "競技規則",
+      "registeration_time": "受付開始日時",
       "ball_type": "ボールの種類",
       "participation_eligibility": "参加資格",
       "participation_payment_method": "参加費支払い方法",
@@ -42,6 +43,7 @@
       "venue_date": "会場日程",
       "selectTournamentCategory": "トーナメントカテゴリーを選択",
       "categoryType": "カテゴリータイプ",
+      "add_more_venues": "会場を追加",
       "mensSinglesIndividual": "男子シングルス個人戦",
       "womensSinglesIndividual": "女子シングルス個人戦",
       "mensDoublesIndividual": "男子ダブルス個人戦",
@@ -62,6 +64,19 @@
       "mens_triples_team": "男子トリプルス団体戦",
       "womens_triples_team": "女子トリプルス団体戦",
       "mixed_triples_team": "混合トリプルス団体戦",
+      "mensTriplesIndividual": "男子トリプルス個人戦",
+      "womensTriplesIndividual": "女子トリプルス個人戦",
+      "mixedTriplesIndividual": "ミックストリプルス個人戦",
+      "costume_detail": "服装について",
+      "mensDoublesTeam": "男子ダブルス団体戦",
+      "womensDoublesTeam": "女子ダブルス団体戦",
+      "mixedDoublesTeam": "ミックスダブルス団体戦",
+      "mensSinglesDoublesTeam": "男子シングルスダブルス団体戦",
+      "womensSinglesDoublesTeam": "女子シングルスダブルス団体戦",
+      "mixedSinglesDoublesTeam": "ミックスシングルスダブルス団体戦",
+      "mensTriplesTeam": "男子トリプルス団体戦",
+      "womensTriplesTeam": "女子トリプルス団体戦",
+      "mixedTriplesTeam": "ミックストリプルス団体戦",
       "numberOfGames": "試合数",
       "gameNumberPlaceholder": "試合番号",
       "score": "スコア",
@@ -77,10 +92,14 @@
       "tenPoints": "10ポイント",
       "twentyPoints": "20ポイント",
       "thirtyPoints": "30ポイント",
-      "intervalDurationPlaceholder": "インターバルの時間",
-      "changeEnds": "エンドを変更",
+      "intervalDuration": "インターバルの時間",
+      "intervalDurationPlaceholder": "インターバルの時間を入力してください。",
+      "game": "ゲーム",
+      "switchScorePlaceholder": "スコアを入力してください",
+      "changeEnds": "チェンジエンド",
+      "switchEnds": "チェンジエンドの有無",
       "switchDuringGame": "試合中に切り替え",
-      "switchScoreDuringGame": "試合中にスコアを切り替え",
+      "switchScoreDuringGame": "試合中のチェンジエンドのスコア",
       "number": "",
       "freeWriting": "",
       "tournament": "トーナメント",
@@ -89,7 +108,14 @@
       "no": "いいえ",
       "submit": "送信",
       "previous": "前へ",
-      "next": "次へ"
+      "next": "次へ",
+      "selectCategory": "カテゴリーを設定",
+      "divisionNumber": "部数を選択",
+      "selectDivisionNumber": "部数を選択",
+      "addCategory": "カテゴリーを追加",
+      "divisionName": "部の名前",
+      "enableIntervals": "インターバルを有効にする",
+      "selectTournamentTimetable": "日程の設定"
     },
     "home": {
       "features": {
