--- a/app/javascript/locales/jp.json
+++ b/app/javascript/locales/jp.json
@@ -679,14 +679,12 @@
       },
       "title": "トーナメント主催者",
       "menu": {
-        "tournamentManagement": "大会管理",
+        "tournamentManagement": "トーナメント管理",
         "usersManagement": "ユーザー管理",
         "organizerManagement": "主催者管理",
         "tournamentCreation": "トーナメント作成",
-        "typeManagement": "タイプ管理",
         "splitManagement": "分割管理",
         "playerManagement": "プレイヤー管理",
-        "leagueTables": "リーグ/トーナメントテーブル",
         "matchManagement": "試合管理",
         "timetable": "タイムテーブル",
         "notificationManagement": "通知管理",
